# server/src/validators/report.validator.js
@@ -1,0 +1,3 @@
+import { query } from 'express-validator';
+
+export const occupancyValidator = [query('floorId').optional().isInt({ min: 1 })];
